# robutt

./: .gitignore  Cargo.toml  Dockerfile  deep.txt
gamesdbapi/: Cargo.toml  Makefile  README.md  spec.yaml
gamesdbapi/.openapi-generator/: FILES
gamesdbapi/docs/: BaseApiResponse.md  Developer.md  Developers.md  DevelopersAllOf.md  DevelopersAllOfData.md  DevelopersApi.md  Game.md  GameImage.md  GamesApi.md  GamesByGameId.md  GamesByGameIdAllOf.md  GamesByGameIdAllOfData.md  GamesByGameIdAllOfInclude.md  GamesByGameIdAllOfIncludeBoxart.md  GamesByGameIdAllOfIncludePlatform.md  GamesByGameIdV1.md  GamesByGameIdV1AllOf.md  GamesByGameIdV1AllOfInclude.md  GamesImages.md  GamesImagesAllOf.md  GamesImagesAllOfData.md  GamesUpdates.md  GamesUpdatesAllOf.md  GamesUpdatesAllOfData.md  Genre.md  Genres.md  GenresAllOf.md  GenresAllOfData.md  GenresApi.md  ImageBaseUrlMeta.md  PaginatedApiResponse.md  PaginatedApiResponseAllOf.md  PaginatedApiResponseAllOfPages.md  Platform.md  PlatformImage.md  PlatformSkinny.md  Platforms.md  PlatformsAllOf.md  PlatformsAllOfData.md  PlatformsApi.md  (+13 more)
gamesdbapi/src/apis/: configuration.rs  developers_api.rs  games_api.rs  genres_api.rs  mod.rs  platforms_api.rs  publishers_api.rs
gamesdbapi/src/models/: base_api_response.rs  developer.rs  developers.rs  developers_all_of.rs  developers_all_of_data.rs  game.rs  game_image.rs  games_by_game_id.rs  games_by_game_id_all_of.rs  games_by_game_id_all_of_data.rs  games_by_game_id_all_of_include.rs  games_by_game_id_all_of_include_boxart.rs  games_by_game_id_all_of_include_platform.rs  games_by_game_id_v1.rs  games_by_game_id_v1_all_of.rs  games_by_game_id_v1_all_of_include.rs  games_images.rs  games_images_all_of.rs  genre.rs  (+30 more)
src/: config.rs  dispatch.rs  loudfile.rs  main.rs
src/lib/: config.rs  dispatch.rs  mod.rs
(+2 files in other folders)
