[package]
name = "robutt"
version = "0.1.0"
authors = ["Erik Hollensbe <github@hollensbe.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = { version = "*", features = [ "yaml" ] }
rand = "*"
futures = "*"
futures-util = '*'
tokio = { version = '*', features = [ 'full' ] }
regex = '*'
anyhow = "*"
url = "*"
trust-dns-resolver = "*"
reqwest = "*"
lazy_static = "*"
html-escape = "*"
